# AI7102-Project

./: .gitignore  README.md  demo.json  pyproject.toml  requirements.txt
src/: build_faiss.py  helper.py  infer.py
src/create_graph/: create_graph.py  graph_utils.py  preprocessing.py  rdf_utils.py  store.py
src/models/: hgt.py  pool.py  reranker.py  reranker2.py
src/synthesis/: classifier.py  data_loader.py  generator.py  prompt.py
src/training/: base_distill.py  bge_distill.py  dataset.py  loss.py  splits.py  train.py  train_loop.py  train_utils.py
