[project]
name = "trungdb-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "faiss-cpu==1.11.0",
    "loguru>=0.7.3",
    "numpy==2.3.1",
    "packaging==25.0",
    "pyparsing==3.2.3",
    "rdflib==7.1.4",
    "sentence-transformers==5.0.0",
    "torch==2.7.1",
    "torch-geometric==2.6.1",
    "tqdm==4.67.1",
    "typer-slim>=0.20.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
